# ranger-ws

./: .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/scout_description/share/scout_description/: package.bash  package.zsh
log/: latest_build
ranger_ctrl/: package.xml  setup.cfg  setup.py
ranger_ctrl/ranger_ctrl/: rotate_in_place_srv.py  send_vel.py
ranger_sim_bringup/: CMakeLists.txt  package.xml
ranger_sim_bringup/config/: ranger_mini_bridge_ros_gz.yaml
ranger_sim_bringup/launch/: classroom_sim.launch.py  ranger_mini_robot_state_publisher.launch.py  ranger_mini_spawn.launch.py  tf_publisher.launch.py
ranger_sim_bringup/rviz/: ranger_mini.rviz
ranger_sim_bringup/src/: tf_publisher.py
ranger_sim_bringup/worlds/: empty.world  robotics_room.sdf
