<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger_sim_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adithyar@todo.todo">adithyar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies for running the simulation -->
  <depend>gazebo_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- URDF dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>